--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<app-navbar></app-navbar>
+<header></header>
+<main>
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">{{titleHeader}}</h5>
+      <p class="card-text">{{bodyHeader}}</p>
+      <p>Tags: {{tagsHeader}}</p>
+      <a href="#" class="btn btn-primary">View more</a>
+    </div>
+  </div>
+  <section>
+    <div class="container mt-3">
+      <div class="row row-gap-2">
+        <div *ngFor="let singlePost of post" class="col-6">
+          <div  class="card">
+            <div class="card-body">
+              <h5 class="card-title">{{singlePost.title}}</h5>
+              <p class="card-text">{{singlePost.body}}</p>
+              <p>{{singlePost.tags}}</p>
+              <a href="#" class="btn btn-primary">View more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
