--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,15 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" routerLinkActive="active" aria-current="page" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Active-posts</a>
+          <a class="nav-link" routerLink="/active-post">Active-posts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Inactive-posts</a>
+          <a class="nav-link" routerLink="/inactive-post">Inactive-posts</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+<router-outlet/>
